--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "js-money",
     "description": "JavaScript implementation of the Money value object.",
-    "version": "0.4.0",
+    "version": "0.5.0",
     "main": "./lib",
     "author": {
         "name": "David Kalosi",
@@ -19,7 +19,7 @@
         "url": "https://github.com/davidkalosi/js-money/issues"
     },
     "dependencies": {
-        "lodash": "*"
+        "lodash": "3.x.x"
     },
     "devDependencies": {
         "mocha": "1.x.x",
